@@ -1,5 +1,8 @@
 2017-12-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/unix/sysv/linux/tile/sigcontextinfo.h (ucontext_get_pc):
+	New function.
+
 	* sysdeps/unix/sysv/linux/microblaze/syscall_cancel.S: New file.
 	* sysdeps/unix/sysv/linux/microblaze/sigcontextinfo.h
 	(ucontext_get_pc): New function.
